fixed homepage on big screens, some progress on small screens also

--- a/content/static/content/css/style.css
+++ b/content/static/content/css/style.css
@@ -9,7 +9,10 @@
     display: flex;
     flex-direction: column;
 }
-
+.hidden
+{
+    display: none;
+}
 body {
     font-family: "Bai Jamjuree", Arial, sans-serif;
     margin: 0;
@@ -23,7 +26,16 @@ header {
     background-color: #333;
     color: white;
     padding: 1rem 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
+@media (max-width: 640px) {
+    header{
+        display: none;
+    }
+}
+
 
 header nav {
     display: flex;
@@ -42,7 +54,51 @@ header nav a {
 header nav a:hover {
     color: #ff9800;
 }
-
+#open-btn
+{
+    position: fixed;
+    right: 5px;
+    top: 5px;
+}
+@media (min-width: 640px) {
+    #open-btn
+    {
+        display: none;
+    }
+}
+.button-holder
+{
+    display: flex;
+    justify-content: flex-end;
+}
+#close-btn
+{
+    position: fixed;
+    right: 5px;
+    top: 5px;
+    width: 27.73px;
+    height: 22px;
+}
+.side-nav {
+    right: 0;
+    top: 0;
+    position: fixed;
+    padding: 20px 20px;
+    z-index: 5;
+    background-color: #333;
+    justify-content: center;
+    gap: 1.5rem;
+    user-select: none;
+}
+.side-nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.1rem;
+    transition: color 0.3s ease;
+}
+.side-nav a:hover {
+    color: #ff9800;
+}
 /* Основной контент */
 main {
     padding: 2rem;
@@ -53,17 +109,7 @@ main {
     border-radius: 8px;
 }
 
-/* Адаптивность */
-@media (max-width: 768px) {
-    header nav {
-        flex-direction: column;
-        gap: 1rem;
-    }
 
-    main {
-        padding: 1rem;
-    }
-}
 
 /* Секция публикаций */
 .publications-section {
@@ -442,7 +488,12 @@ main {
     display: flex;
     margin-left: 10%;
 }
-
+@media (max-width: 900px) {
+    .homepage-wrapper {
+        width: 95%;
+        margin-left: 2.5%;
+    }
+}
 .welcome-block
 {
     width: 100%;
@@ -451,9 +502,17 @@ main {
     justify-content: center;
     margin-top: 50px;
 }
+
 @media (max-width: 1024px) {
     .welcome-block {
-        gap: 20px
+
+        height: 500px;
+    }
+}
+@media (max-width: 768px) {
+    .welcome-block {
+
+        height: 400px;
     }
 }
 .homepage-col-2
@@ -465,17 +524,58 @@ main {
 {
     gap: 40px;
 }
+@media (max-width: 1024px)
+{
+    .homepage-right-text-block
+    {
+        gap: 20px;
+    }
+}
+@media (max-width: 768px)
+{
+    .homepage-right-text-block
+    {
+        gap: 10px;
+    }
+}
+@media (max-width: 768px) {
+    .homepage-title h1
+    {
+        margin-bottom: 0;
+    }
+}
+
 .homepage-text-1
 {
-    height: 200px;
     font-size: medium;
     font-weight: bold;
+}
+@media(max-width: 1024px)
+{
+    .homepage-text-1
+    {
+        font-size: 13px;
+    }
+}
+@media(max-width: 768px)
+{
+    .homepage-text-1
+    {
+        font-size: 12px;
+    }
 }
 
 .homepage-content{
     display: flex;
     gap: 40px;
     justify-items: center;
+}
+
+@media (max-width: 640px){
+    .homepage-content
+    {
+        display: none;
+    }
 }
 
 .homepage-image-1 img{
